# dagger

./: CMakeLists.txt  README.md
cmake/: config-ix.cmake
cmake/modules/: LLVM-Config.cmake
docs/: DCTranslation.rst  SemanticsEmitterTableGen.rst  WritingAnLLVMBackend.rst  index.rst
docs/DC/: index.rst
include/llvm/: module.modulemap
include/llvm-c/: Target.h
include/llvm/ADT/: ArrayRef.h
include/llvm/Config/: TargetDCs.def.in  llvm-config.h.cmake
include/llvm/DC/: DCAnnotationWriter.h  DCBasicBlock.h  DCFunction.h  DCInstrSema.h  DCInstruction.h  DCModule.h  DCOpcodes.h  DCRegisterSema.h  DCRegisterSetDesc.h  DCTranslatedInstTracker.h  DCTranslator.h  DCTranslatorUtils.h  LowerDCTranslateAt.h  RegisterValueUtils.h  Semantics.td
include/llvm/IR/: Intrinsics.td
include/llvm/MC/: MCInstPrinter.h  MCObjectDisassembler.h
include/llvm/Support/: TargetRegistry.h  TargetSelect.h
lib/: CMakeLists.txt  LLVMBuild.txt
lib/DC/: CMakeLists.txt  DCAnnotationWriter.cpp  DCBasicBlock.cpp  DCFunction.cpp  DCInstrSema.cpp  DCInstruction.cpp  DCModule.cpp  DCRegisterSema.cpp  DCRegisterSetDesc.cpp  DCTranslatedInstTracker.cpp  DCTranslator.cpp  DCTranslatorUtils.cpp  LLVMBuild.txt  LowerDCTranslateAt.cpp  RegisterValueUtils.cpp
lib/MC/: CMakeLists.txt  MCInstPrinter.cpp  MCInstrAnalysis.cpp
test/: CMakeLists.txt  lit.cfg
test/DC/: lit.local.cfg
tools/: CMakeLists.txt
tools/dyn/: CMakeLists.txt  dyn.cpp
tools/dyn/dyncore/: CMakeLists.txt  dyncore.cpp  dyncore.h
tools/llvm-bintrans/: CMakeLists.txt  llvm-bintrans.cpp
tools/llvm-dc/: CMakeLists.txt  llvm-dc.cpp
tools/llvm-dec/: CMakeLists.txt  llvm-dec.cpp
tools/llvm-mc/: llvm-mc.cpp
tools/llvm-mccfg/: CMakeLists.txt  LLVMBuild.txt  Makefile  llvm-mccfg.cpp
tools/llvm-objdump/: CMakeLists.txt  LLVMBuild.txt  MachODump.cpp  llvm-objdump.cpp
unittests/MC/: CMakeLists.txt  Makefile
utils/: diff_regs_lldb.py
utils/TableGen/: AsmWriterEmitter.cpp  CMakeLists.txt  CodeGenDAGPatterns.cpp  CodeGenDAGPatterns.h  InstrInfoEmitter.cpp  SemanticsEmitter.cpp  TableGen.cpp  TableGenBackends.h
utils/dcgentests/: dcgentests.py  generate_manual_inst_list.sh  manual_inst_list.txt  update_llvm-dec_test_checks.py
(+1364 files in other folders)
